# blake

./: .pre-commit-config.yaml  Cargo.toml
src/: builder.rs  lib.rs  main.rs  posts.rs
src/builder/: feed.rs  html.rs  sidenotes.rs
templates/: base.html  index.html  post.html
