[package]
name = "blake"
version = "0.1.0"
authors = ["Jonathan Lange <jml@mumak.net>"]
edition = "2018"

[dependencies]
clap = "2.33"
chrono = { version = "0.4", features = ["serde"] }
comrak = "0.6"
fs_extra = "1.1"
lazy_static = "1.4"
serde = { version = "1.0", features = ["derive"] }
tera = "1.1"
